# Data-Engineering

./: .gitignore  .~lock.EYVI_departures.csv#  .~lock.EYVI_flights.csv#  EYVI_departures.csv  EYVI_fig.txt  EYVI_flights.csv  EYVI_flights_raw.csv  README.md  airport_details.txt  arivalas.txt  arrivals.csv  csv  flights.csv  flights_EYVI.csv  flights_data.csv  hive_external_tbale  movies.db  reports.db
10_Rust_DataFusion_vs_PySpark/: .gitignore  README.md  notes.txt
10_Rust_DataFusion_vs_PySpark/pySpark/: main.py
10_Rust_DataFusion_vs_PySpark/rust-datafusion/: Cargo.toml
11_Google_reinvent_SQL/: README.md  notes.txt
11_Reinvent_sql_Bigquery/: README.md
12_BigQuery_history_based_optimizations/: README.md
13_GCP_costs_optimization_techniques/: README.md
13_GCP_reducing_costs_tips/: README.md
14_Is_data_engineering_creative/: README.md
14_Is_data_engineering_creative/scatter_chart_example/: Cargo.toml  README.md
1_DE_trainings/homework_1/: test.csv
1_DE_trainings/homework_2/: README.md
1_DE_trainings/homework_4/: app.py
1_Data_engineering_trainings/: 1_nicknames.py  hm_7_instructions.txt
1_Data_engineering_trainings/homework_1/: README.md  app.py
1_Data_engineering_trainings/homework_3/: README.md  reader_app.py
1_Data_engineering_trainings/homework_5/: 3_upload_latest.py  change_nickname.py  reports.db
3.1_DE_with_GCP/: data-catalog-run.txt
3.1_DE_with_GCP/.sql/: data-catalog-postgresql.sql  data-warehouse-finance-datamart-ddl.sql  data-warehouse-staging-dw-ddl.sql
3.1_DE_with_GCP/data/: schema_on_read_no_header.csv  schema_on_read_with_header.csv  spark_loan.jsonl  spark_people.jsonl  star_dim_customer.csv  star_dim_date.csv  star_dim_employee.csv
3.1_DE_with_GCP/python/: data-warehouse-etl-to-postgres.ipynb  postgresql-etl-extract.ipynb  spark-city.ipynb  spark-etl-movies-analyze.ipynb  spark-etl-movies-names.py  spark-etl-movies-ratings.py  (+2 more)
4_Lithuania_statistics/: .gitignore  README.md
5_LT_companies_cars/: .gitignore  README.md  main.py  setup.py
5_LT_companies_cars/srcrust/: Cargo copy.toml  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  notes.txt
5_LT_companies_cars/srcrust/src/: main.rs  notes.txt
6_Best_time_watch_airplanes_in_vno/: .gitignore  LICENSE.md  README.md  app.py  app.yaml  requirements.txt
7_DE_Rust_vs_Python_performance/: README.md
7_DE_with_Rust/: README.md  notes.txt
7_DE_with_Rust/1_uploading_large_file/with_rust/: .gitignore  Cargo.toml
7_DE_with_Rust/1_uploading_large_file/with_rust/src/: main copy.rs  main(backup).rs  main.rs
7_DE_with_Rust/with_rust/: Cargo.toml
7_DE_with_Rust/with_rust/src/: main(back).rs  main(backup).rs  main(temp).rs  main.rs  times.txt
8_Real_time_streaming_Rust/streamer/: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  streamer.txt
8_Real_time_streaming_Rust/streamer/src/: main.rs  notes.txt
9_Business_activity_chatbot_in_BigQuery/: notes.txt
9_Gemini_Pro_LLM_in_BigQuery/: notes.txt
9_Gemini_Pro_translator_in_BigQuery/: README.md  notes.txt
9_Gemini_in_BigQuery/: notes.txt
homework_1/: app.py  app_v2.py  test.csv
homework_2/: app.py
homework_3/: app1.py  create_tables.sql  insert_app.py  movies_new.csv  reader_app.py
homework_4/: README.md  app.py  bad_words_table
homework_5/: 1_nicknames.py  2_change_nickname.py  2_upload_nickname.py
homework_6/: homework_6_source_to_target_mapping.xlsx
(+115 files in other folders)
