[package]
name = "src_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud-storage = "0.15.0"
google-cloud-default = "0.4.0"
google-cloud-auth = "0.13.0"
gcp-bigquery-client = "0.18.0"
csv = "1.3.0"
reqwest = "0.11.23"
tokio = "1.35.1"
warp = "0.3.6"
hyper = { version = "0.14", features = ["full"] }