[package]
name = "with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud-storage = "0.14.0"
reqwest = { version = "0.11.22"}
tokio = { version = "1.34.0", features = ["full"]}
google-cloud-auth = "0.13.0"
polars = {version = "0.35.4", features = ["lazy"] }
gcp-bigquery-client = "0.18.0"
csv = "1.3.0"
arrow = "49.0.0"
csv2parquet = "0.17.8"