[package]
name = "streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.63", features = ["vendored"] }
url = "2.5.0"
serde_json = "1.0.113"
reqwest = "0.11.24"
awc = { version = "3.4.0", features = ["rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
futures = "0.3.30"
google-cloud-auth = "0.13.0"
async-trait = "0.1.77"
google-cloud-pubsub = "0.22.1"
google-cloud-googleapis = "0.12.0"
gcp-bigquery-client = "0.18.0"
warp = "0.3.6"
hyper = { version = "0.14", features = ["full"] }