[package]
name = "with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud-storage = "0.14.0"
reqwest = { version = "0.11.22"}
tokio = { version = "1.34.0", features = ["full"] }
google-cloud-auth = "0.13.0"
async_zip = { version = "0.0.15", features = ["full"] }
flate2 = "1.0.28"