[package]
name = "with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud-storage = "0.14.0"
reqwest = { version = "0.11.22"}
tokio = { version = "1.34.0", features = ["full"] }
google-cloud-auth = "0.13.0"
zip = "0.6.4"
flate2 = "1.0.28"
lz4_flex = { version = "0.11", default-features = false }